--- a/GalaxyCanvas.html
+++ b/GalaxyCanvas.html
@@ -5,8 +5,10 @@
 </head>
 <body style="margin:0px;">
 
+<noscript>
+	Javascript is disabled in your browser. This really can't work without it, sorry.
+</noscript>
 	
-	<noscript>Javascript is disabled in your browser. This really can't work without it, sorry.</noscript>
 <div id="SpaceView">
 <canvas id="canvas-SpaceView"></canvas>
 </div>
